fix: layout bugs

--- a/do-you-know-react-app/src/Pages/CategoryPage/style.css
+++ b/do-you-know-react-app/src/Pages/CategoryPage/style.css
@@ -1,4 +1,4 @@
-button {
+.button {
   min-width: 17rem;
   max-width: 18rem;
   font-weight: 300;
@@ -11,6 +11,6 @@ button {
   font-size: 1.5rem;
 }
 
-button:hover {
+.button:hover {
   background-color: rgb(183, 176, 176);
 }
